# data_product_generation

./: .gitignore  .gitmodules  main.py  pyproject.toml
jupyter/: get-SFR-profile.ipynb  get-genPK-info.ipynb  get-group-profiles.ipynb  get-profiles.ipynb  get-pyliansPK.ipynb  get-snapshot-info.ipynb
