[project]
name = "data-product-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fake-spectra>=2.2.4",
    "h5py>=3.15.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.2",
    "pylians>=0.12",
    "tqdm>=4.67.3",
]
